<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">PhotoPhase</string>
    <string name="app_description">PhotoPhase Live Wallpaper</string>
    <string name="app_legal">Copyright \u00A9 <xliff:g id="year">%1$s</xliff:g> Jorge Ruesga</string>
    <string name="no_pictures_oops_msg">No pictures found</string>
    <string name="no_pictures_permission_required_msg">Permission required. Tap here.</string>
    <string name="no_wallpaper_live_preview_activity_found">Can\'t open Wallpaper Live Preview</string>
    <string name="no_pictures_albums_found_msg">No albums found</string>
    <string name="no_pictures_albums_tap_to_refresh_msg">Tap to refresh</string>
    <string name="no_pictures_albums_not_granted_permission_msg">No granted permission</string>
    <string name="no_pictures_albums_tap_to_request_permission_msg">Tap to request permission</string>
    <string name="mnu_ok" translatable="false">@android:string/ok</string>
    <string name="mnu_restore">Restore</string>
    <string name="mnu_delete">Delete</string>
    <string name="mnu_save">Save</string>
    <string name="mnu_select_all">Select all</string>
    <string name="mnu_deselect_all">Deselect all</string>
    <string name="mnu_invert">Invert</string>
    <string name="mnu_select_album">Select album</string>
    <string name="mnu_deselect_album">Deselect album</string>
    <string name="mnu_details">Details</string>
    <string name="mnu_share">Share</string>
    <string name="mnu_cast">Cast</string>
    <string name="mnu_enqueue">Enqueue</string>
    <string name="format_disabled">Disabled</string>
    <string name="format_rotate_only">On rotation</string>
    <string name="format_seconds">%s sec.</string>
    <string name="format_minutes">%s min.</string>
    <string name="format_hours">%s h.</string>
    <string name="format_days">%s d.</string>
    <string name="format_dim">%s%%</string>
    <string name="pref_general">General</string>
    <string name="pref_general_summary">General settings, effects and transitions</string>
    <string name="pref_general_app_shortcut_title">App shortcut</string>
    <string name="pref_general_app_shortcut_summary">Display a PhotoPhase shortcut in your Launcher\'s drawer</string>
    <string name="pref_general_set_wallpaper">Set as wallpaper</string>
    <string name="pref_general_settings">Settings</string>
    <string name="pref_general_settings_wallpaper_dim">Wallpaper dim</string>
    <string name="pref_general_settings_background_color">Background color</string>
    <string name="pref_general_settings_background_color_summary">Set the background color</string>
    <string name="pref_general_power_of_two">Power of two</string>
    <string name="pref_general_power_of_two_summary">By converting the picture to a power of two texture, the graphics pipeline can take advantage of more optimizations and be more efficient using its resources,
        but, in the other side, it will create a square texture, so depending on your disposition layout some pictures could be appear stretched, ignoring any aspect ratio correction.</string>
    <string name="pref_general_aspect_ratio_correction">Aspect ratio</string>
    <string name="pref_general_aspect_ratio_correction_summary">Try to fix the picture\'s aspect ratio by cropping it to fit the destination frame</string>
    <string name="pref_general_frame_spacer">Frame spacer</string>
    <string name="pref_general_frame_spacer_summary">Add a bit of separation between frames</string>
    <string name="pref_general_wallpaper_offset">Wallpaper offset</string>
    <string name="pref_general_wallpaper_offset_summary">Adjust wallpaper offset to move across all your launcher drawer pages</string>
    <string name="pref_general_touch">Touch</string>
    <string name="pref_general_touch_mode">Touch mode</string>
    <string name="pref_general_touch_mode_on">Fired in double tap</string>
    <string name="pref_general_touch_mode_off">Fired in single tap</string>
    <string name="pref_general_touch_action">Touch action</string>
    <string name="pref_general_touch_action_summary_format"><xliff:g id="action_summary">%1$s</xliff:g> when touching a frame</string>
    <string name="pref_general_touch_open_with">Open with</string>
    <string name="pref_general_touch_open_with_summary_on">Internal photo viewer</string>
    <string name="pref_general_touch_open_with_summary_off">External photo viewer</string>
    <string name="pref_general_transitions">Transitions</string>
    <string name="pref_general_transitions_types">Types</string>
    <string name="pref_general_transitions_types_summary_format"><xliff:g id="selected">%1$d</xliff:g> of <xliff:g id="total">%2$d</xliff:g> types selected</string>
    <string name="pref_general_transitions_interval">Interval</string>
    <string name="pref_general_effects">Effects</string>
    <string name="pref_general_effects_types">Types</string>
    <string name="pref_general_effects_types_summary_format"><xliff:g id="selected">%1$d</xliff:g> of <xliff:g id="total">%2$d</xliff:g> image effects selected</string>
    <string name="pref_general_borders">Borders</string>
    <string name="pref_general_border_color">Color</string>
    <string name="pref_general_border_color_summary">Set the border color</string>
    <string name="pref_general_borders_types">Types</string>
    <string name="pref_general_borders_types_summary_format"><xliff:g id="selected">%1$d</xliff:g> of <xliff:g id="total">%2$d</xliff:g> image borders selected</string>
    <string name="pref_general_live_preview">Live preview</string>
    <string name="pref_media">Media</string>
    <string name="pref_media_summary">Albums to be displayed, refresh interval, and other media settings</string>
    <string name="pref_media_settings">Settings</string>
    <string name="pref_media_settings_refresh_interval">Refresh interval</string>
    <string name="pref_media_settings_refresh_interval_disable">Searching for new pictures is disabled</string>
    <string name="pref_media_settings_refresh_interval_summary">Search for new pictures every <xliff:g id="interval">%1$s</xliff:g></string>
    <string name="pref_media_settings_refresh_now">Refresh now</string>
    <string name="pref_media_settings_refresh_now_summary">Manually refresh the picture database</string>
    <string name="pref_media_random_title">Show images randomly</string>
    <string name="pref_media_random_summary_on">Images are displayed in a randomly sequence</string>
    <string name="pref_media_random_summary_off">Images are displayed in a sequential way</string>
    <string name="pref_media_remember_last_title">Remember last image</string>
    <string name="pref_media_remember_last_summary_on">The app will start showing the latest shown image</string>
    <string name="pref_media_remember_last_summary_off">The app will start showing the first image in the queue</string>
    <string name="pref_media_pictures">Pictures</string>
    <string name="pref_media_albums">Albums</string>
    <string name="pref_media_albums_summary">Set the albums and pictures that will be displayed on the wallpaper</string>
    <string name="pref_media_auto_select_new">Auto select albums</string>
    <string name="pref_media_auto_select_new_summary">Automatically select new albums when media discovery occurs</string>
    <string name="pref_media_album_not_exists">Album not exists</string>
    <string name="pref_layout">Layout</string>
    <string name="pref_layout_summary">Positioning of pictures on the screen</string>
    <string name="pref_layout_disposition">Arrangement</string>
    <string name="pref_random_dispositions">Random</string>
    <string name="pref_random_dispositions_summary">Generate random arrangements at a chosen interval</string>
    <string name="pref_random_dispositions_interval">Interval</string>
    <string name="pref_disposition_portrait">Portrait arrangement</string>
    <string name="pref_disposition_landscape">Landscape arrangement</string>
    <plurals name="pref_disposition_summary_format">
        <item quantity="one">1 image is shown in <xliff:g id="orientation">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> images are shown in <xliff:g id="orientation">%2$s</xliff:g></item>
    </plurals>
    <string name="disposition_orientation_portrait">portrait orientation</string>
    <string name="disposition_orientation_landscape">landscape orientation</string>
    <string name="pref_cast">Cast</string>
    <string name="pref_cast_summary">Photo cast settings</string>
    <string name="pref_cast_discovery_title">Discovery</string>
    <string name="pref_cast_enable_title">Enabled</string>
    <string name="pref_cast_autoconnect_title">Auto-connect</string>
    <string name="pref_cast_autoconnect_summary">Try to connect to the last connected device without ask to choose a device</string>
    <string name="pref_cast_last_connected_device_title">Last connected device</string>
    <string name="pref_cast_no_connected_device">No device connected</string>
    <string name="pref_cast_clear_connected_device">Forget last connected device?</string>
    <string name="pref_cast_connected_device" translatable="false"><xliff:g id="name">%1$s</xliff:g>\n<xliff:g id="address">%2$s</xliff:g></string>
    <string name="pref_cast_discovery_time_title">Discovery time</string>
    <string name="pref_cast_slideshow_title">Slideshow</string>
    <string name="pref_cast_slideshow_time_title">Time</string>
    <string name="pref_cast_slideshow_time_summary">The elapsed time between photo transitions</string>
    <string name="pref_cast_slideshow_repeat_title">Repeat</string>
    <string name="pref_cast_slideshow_shuffle_title">Shuffle</string>
    <string name="pref_cast_visualization_title">Visualization</string>
    <string name="pref_cast_full_quality_title">Full quality</string>
    <string name="pref_cast_full_quality_summary_on">Photos will be shown in the highest quality. Load times will increase as picture quality increases.</string>
    <string name="pref_cast_full_quality_summary_off">Photos will be compressed in order to gain better load times.</string>
    <string name="pref_cast_aspect_ratio_title">Aspect ratio</string>
    <string name="pref_cast_aspect_ratio_summary_on">Keep aspect ratio</string>
    <string name="pref_cast_aspect_ratio_summary_off">Stretch to fit on screen</string>
    <string name="pref_cast_blurred_background_title">Blurred background</string>
    <string name="pref_cast_blurred_background_summary">Fill background with a blurred effect of the same photo whenever it doesn\'t cover all the screen</string>
    <string name="pref_cast_ui_title">User interface</string>
    <string name="pref_cast_show_time_title">Show time</string>
    <string name="pref_cast_show_weather_title">Show weather</string>
    <string name="pref_cast_show_logo_title">Show logo</string>
    <string name="pref_cast_show_track_title">Show track info</string>
    <string name="pref_disposition_description">Long tap a frame and drag \u0026 drop its borders. Swipe left and right to show defined templates</string>
    <string name="pref_disposition_saved">Saved <xliff:g id="number_of_saved">%1$s</xliff:g> de <xliff:g id="total_of_saved">%2$s</xliff:g></string>
    <string name="pref_disposition_template">Template <xliff:g id="number_of_template">%1$s</xliff:g> of <xliff:g id="total_of_templates">%2$s</xliff:g></string>
    <string name="pref_disposition_unable_delete_advise">Unable to delete the selected frame</string>
    <string name="pref_about">About</string>
    <string name="refresh_intervals_disabled">Disabled</string>
    <string name="refresh_intervals_1h">1 hour</string>
    <string name="refresh_intervals_4h">4 hours</string>
    <string name="refresh_intervals_1d">1 day</string>
    <string name="refresh_intervals_2d">2 days</string>
    <string name="refresh_intervals_1w">1 week</string>
</resources>