<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 Jorge Ruesga
     Copyright (C) 2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Enable/disable icon -->
    <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
        android:key="app_shortcut"
        android:title="@string/pref_general_app_shortcut_title"
        android:summary="@string/pref_general_app_shortcut_summary"
        android:persistent="false" />

    <!-- Set wallpaper -->
    <Preference
        android:key="set_as_wallpaper"
        android:title="@string/pref_general_set_wallpaper" />

    <!-- Settings -->
    <PreferenceCategory
        android:key="category_settings"
        android:title="@string/pref_general_settings">

        <!-- Dim screen -->
        <com.ruesga.android.wallpapers.photophase.preferences.DiscreteSeekBarProgressPreference
            android:key="ui_wallpaper_dim"
            android:title="@string/pref_general_settings_wallpaper_dim"
            android:persistent="true"
            android:defaultValue="0" />

        <!-- Background color -->
        <com.ruesga.android.wallpapers.photophase.preferences.ColorPickerPreference
            android:key="ui_background_color"
            android:title="@string/pref_general_settings_background_color"
            android:summary="@string/pref_general_settings_background_color_summary"
            android:persistent="true"
            android:defaultValue="@color/wallpaper_background_color" />

        <!-- Power of two -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_power_of_two"
            android:title="@string/pref_general_power_of_two"
            android:summary="@string/pref_general_power_of_two_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <!-- Aspect ratio correction -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_fix_aspect_ratio"
            android:title="@string/pref_general_aspect_ratio_correction"
            android:summary="@string/pref_general_aspect_ratio_correction_summary"
            android:persistent="true"
            android:defaultValue="true" />

        <!-- Frame separator -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_frame_spacer"
            android:title="@string/pref_general_frame_spacer"
            android:summary="@string/pref_general_frame_spacer_summary"
            android:persistent="true"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Touch behaviour -->
    <PreferenceCategory
        android:key="category_touch"
        android:title="@string/pref_general_touch">

        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_touch_mode"
            android:title="@string/pref_general_touch_mode"
            android:summaryOn="@string/pref_general_touch_mode_on"
            android:summaryOff="@string/pref_general_touch_mode_off"
            android:persistent="true"
            android:defaultValue="true" />

        <!-- Touch action -->
        <ListPreference
            android:key="ui_touch_action"
            android:title="@string/pref_general_touch_action"
            android:persistent="true"
            android:entries="@array/touch_actions_labels"
            android:entryValues="@array/touch_actions_values"
            android:defaultValue="0" />

        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_touch_open_with"
            android:title="@string/pref_general_touch_open_with"
            android:summaryOn="@string/pref_general_touch_open_with_summary_on"
            android:summaryOff="@string/pref_general_touch_open_with_summary_off"
            android:persistent="true"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Transitions -->
    <PreferenceCategory
        android:key="category_transitions"
        android:title="@string/pref_general_transitions">

        <!-- Types -->
        <com.ruesga.android.wallpapers.photophase.preferences.MultiSelectListPreferenceCompat
            android:key="ui_transition_types"
            android:title="@string/pref_general_transitions_types"
            android:persistent="false"
            android:defaultValue="@array/transitions_default" />

        <Preference
            android:key="ui_transition_live_preview"
            android:title="@string/pref_general_live_preview"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.LiveTransitionsPreviewFragment"
            android:persistent="false" />

        <!-- Transitions Interval -->
        <com.ruesga.android.wallpapers.photophase.preferences.DiscreteSeekBarProgressPreference
            android:key="ui_transition_interval"
            android:title="@string/pref_general_transitions_interval"
            android:persistent="true"
            android:defaultValue="2" />

    </PreferenceCategory>

    <!-- Effects -->
    <PreferenceCategory
        android:key="category_effects"
        android:title="@string/pref_general_effects">

        <!-- Types -->
        <com.ruesga.android.wallpapers.photophase.preferences.MultiSelectListPreferenceCompat
            android:key="ui_effect_types"
            android:title="@string/pref_general_effects_types"
            android:persistent="false"
            android:defaultValue="@array/effects_default" />

        <Preference
            android:key="ui_effect_live_preview"
            android:title="@string/pref_general_live_preview"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.LiveEffectsPreviewFragment"
            android:persistent="false" />

    </PreferenceCategory>

    <!-- Borders -->
    <PreferenceCategory
        android:key="category_borders"
        android:title="@string/pref_general_borders">

        <!-- Background color -->
        <com.ruesga.android.wallpapers.photophase.preferences.ColorPickerPreference
            android:key="ui_border_color"
            android:title="@string/pref_general_border_color"
            android:summary="@string/pref_general_border_color_summary"
            android:persistent="true"
            android:defaultValue="@color/wallpaper_background_color" />

        <!-- Types -->
        <com.ruesga.android.wallpapers.photophase.preferences.MultiSelectListPreferenceCompat
            android:key="ui_border_types"
            android:title="@string/pref_general_borders_types"
            android:persistent="false"
            android:defaultValue="@array/borders_default" />

        <Preference
            android:key="ui_border_live_preview"
            android:title="@string/pref_general_live_preview"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.LiveBordersPreviewFragment"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
