<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 Jorge Ruesga

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Settings -->
    <PreferenceCategory
        android:key="category_refresh"
        android:title="@string/pref_media_settings">

        <!-- Refresh Interval -->
        <ListPreference
            android:key="ui_media_refresh_interval"
            android:title="@string/pref_media_settings_refresh_interval"
            android:persistent="true"
            android:entries="@array/refresh_intervals_labels"
            android:entryValues="@array/refresh_intervals_values"
            android:defaultValue="0" />

        <!-- Refresh now -->
        <Preference
            android:key="ui_media_refresh_now"
            android:title="@string/pref_media_settings_refresh_now"
            android:summary="@string/pref_media_settings_refresh_now_summary"
            android:persistent="false" />

        <!-- Random media -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_media_random"
            android:title="@string/pref_media_random_title"
            android:summaryOn="@string/pref_media_random_summary_on"
            android:summaryOff="@string/pref_media_random_summary_off"
            android:defaultValue="true"/>

        <!-- Remember the last shown media -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_media_remember_last_media_show"
            android:title="@string/pref_media_remember_last_title"
            android:summaryOn="@string/pref_media_remember_last_summary_on"
            android:summaryOff="@string/pref_media_remember_last_summary_off"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <!-- Pictures -->
    <PreferenceCategory
        android:key="category_pictures"
        android:title="@string/pref_media_pictures">

        <!-- Albums -->
        <Preference
            android:key="ui_media_albums"
            android:title="@string/pref_media_albums"
            android:summary="@string/pref_media_albums_summary"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.ChoosePicturesFragment"
            android:persistent="false" />

        <!--  Auto select new albums -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_media_auto_select_new"
            android:title="@string/pref_media_auto_select_new"
            android:summary="@string/pref_media_auto_select_new_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
