<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 Jorge Ruesga
     Copyright (C) 2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Disposition -->
    <PreferenceCategory
        android:key="category_disposition"
        android:title="@string/pref_layout_disposition">

        <!-- Random dispositions -->
        <com.ruesga.android.wallpapers.photophase.preferences.SwitchPreference
            android:key="ui_disposition_random"
            android:title="@string/pref_random_dispositions"
            android:summary="@string/pref_random_dispositions_summary" />

        <!-- Random dispositions interval -->
        <com.ruesga.android.wallpapers.photophase.preferences.DiscreteSeekBarProgressPreference
            android:key="ui_disposition_random_interval"
            android:title="@string/pref_random_dispositions_interval"
            android:persistent="true"
            android:defaultValue="0"
            android:dependency="ui_disposition_random" />

        <!-- Portrait -->
        <Preference
            android:key="ui_disposition_portrait"
            android:title="@string/pref_disposition_portrait"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.PortraitDispositionFragment"
            android:persistent="false" />

        <!-- Landscape -->
        <Preference
            android:key="ui_disposition_landscape"
            android:title="@string/pref_disposition_landscape"
            android:fragment="com.ruesga.android.wallpapers.photophase.preferences.LandscapeDispositionFragment"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
